fix: hide the scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,3 +76,6 @@ body {
     @apply bg-background text-foreground;
   }
 }
+::-webkit-scrollbar{
+  display: none;
+}
